--- a/documentation/modules/ROOT/pages/02-templates.adoc
+++ b/documentation/modules/ROOT/pages/02-templates.adoc
@@ -16,19 +16,19 @@ Keep default values in every field except the _Repository Name_ in the first sec
 
 image::frontend_1.png[]
 
-Type or paste your Project/namespace name to replace the NAMESPACE placeholder in the _Repository Name_ field. The result should be something like `myprojectname-frontend`. Click NEXT STEP to continue.
+Type or paste your Project/namespace name to replace the NAMESPACE placeholder in the _Repository Name_ field. The result should be something like `projectname-frontend`. Click NEXT STEP to continue.
 
 image::frontend_2.png[]
 
-In the second section of the template create form, type or paste your Project/namespace name to replace the NAMESPACE placeholder in the _Namespace_ field. The result should be something like `myprojectname`.
+In the second section of the template create form, type or paste your Project/namespace name to replace the NAMESPACE placeholder in the _Namespace_ field. The result should be something like `projectname`.
 
-Fill in the _Owner_ field by either *A)* Clicking the Owner field and selecting your `user:NAMESPACE` matching your user/Project name from the pull-down menu, *or* *B)* if your Project name does not appear in the pull-down menu, typing the literal string `user`, followed by a colon `:`, followed by your Project name. The resulting string should be something like `user:myprojectname`.
+Fill in the _Owner_ field by either *A)* Clicking the Owner field and selecting your `user:NAMESPACE` matching your user/Project name from the pull-down menu, *or* *B)* if your Project name does not appear in the pull-down menu, typing the literal string `user`, followed by a colon `:`, followed by your Project name. The resulting string should be something like `user:projectname`.
 
 Click NEXT STEP to proceed to the third section of the template create form.
 
 image::frontend_3.png[]
 
-Type or paste your Project name to replace the NAMESPACE placeholder in the _Image Name_ field of the create form's third section. The result should be something like `myprojectname/poi-map-app`. Click NEXT STEP to continue to review the configuration you've set in the frontend template.
+Type or paste your Project name to replace the NAMESPACE placeholder in the _Image Name_ field of the create form's third section. The result should be something like `projectname/poi-map-app`. Click NEXT STEP to continue to review the configuration you've set in the frontend template.
 
 image::frontend_4.png[]
 
