--- a/README.adoc
+++ b/README.adoc
@@ -28,9 +28,9 @@ To learn about the Software Templates that were used in this workshop, explore t
 
 To set up your own workshop cluster, link:https://janus-idp.io/demo-setup/install/[begin with the demo-setup installation instructions] while implementing the following changes:
 1. When asked to fork the `janus-idp/software-templates` repo, use this repo instead: `https://github.com/redhat-scholars/backstage-workshop`.  Make sure that the resulting repo is named "software-templates"
-2. Use this modified `template.yaml` file: ...
-3. Use this modified `site.yaml` file: ...
-4. Complete all Post Install instructions in the next section
+2. Use this modified `template.yaml` file: https://github.com/ryanj/janus-platforms/blob/workshop/ansible/cluster-setup/template.yaml
+3. Use this modified `site.yaml` file: https://github.com/ryanj/janus-platforms/blob/workshop/ansible/cluster-setup/site.yaml
+4. After the ansible installation has finished successfully, complete all Post Install instructions in the next section
 
 === Post Install
 
@@ -100,7 +100,7 @@ oc create -f consolelink.*
 
 ==== Installing the Namespace Configuration Operator
 
-Install the CoP Namespace Configuration Operator from the OperatorHub.
+Install the CoP Namespace Configuration Operator from the OperatorHub using the Administrative view in the OpenShift Web Console.
 
 After the operator installation has completed, install the following UserConfig yaml:
 
