--- a/README.adoc
+++ b/README.adoc
@@ -1,21 +1,23 @@
 = Backstage Workshop for Red Hat Summit 2023
 
+To learn about the Software Templates that were used in this workshop, explore the `scaffolder-templates` folder. For additional Template examples, see https://github.com/janus-idp/software-templates
+
 == Workshop Content Development
 
-=== Local Development with Gulp
-Setup:
+==== Local Development with Gulp
+Install local development dependencies via `npm`:
 
 ```bash
 npm install
 ```
 
-Run a development server:
+Launch a local development server:
 
 ```bash
 npm start
 ```
 
-=== Promoting your changes
+==== Promoting your changes
 
 Add and commit your changes, then run `git push` to trigger a new deployment:
 
@@ -24,7 +26,6 @@ git push origin master
 ```
 
 == Workshop Cluster Setup
-To learn about the Software Templates that were used in this workshop, explore the `scaffolder-templates` folder
 
 To set up your own workshop cluster, link:https://janus-idp.io/demo-setup/install/[begin with the demo-setup installation instructions] while implementing the following changes:
 
